task4-1/controll/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t41-svc
  namespace: task41
spec:
  selector:
    app: t41
  ports:
    - protocol: TCP
      port: 80 # Porta do serviço
      targetPort: 7000 # Porta do contêiner
  type: ClusterIP
