task4-1/controll/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t4-1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dominio41.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task4-1-service
                port:
                  number: 80
